--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_sound: ^9.2.13
   assets_audio_player: ^3.0.6
   rxdart: ^0.27.7
+  flutter_map: ^3.1.0
   
 dev_dependencies:
   flutter_test:
